--- a/port.html
+++ b/port.html
@@ -52,7 +52,7 @@
     <nav class="navbar">
       <div class="navbar-container container">
         <div>
-          <h1 class="navbar-brand">Radha</h1>
+          <h1 class="navbar-brand">Mounika</h1>
         </div>
         <ul class="menu-items">
           <li><a href="#about">About</a></li>
@@ -63,7 +63,7 @@
     </nav>
     <div class="home-content" id="home-page">
       <div class="name">
-        <h1>Hi, I'm Radha</h1>
+        <h1>Hi, I'm Mounika</h1>
         <p>A Web Developer in training.</p>
       </div>
       <div class="angle-down-icon">
